Adicionando outras análises

--- a/analysis_grass.ipynb
+++ b/analysis_grass.ipynb
@@ -1701,7 +1701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1726,7 +1726,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>english_name</th>\n",
-       "      <th>primary_type</th>\n",
+       "      <th>secondary_type</th>\n",
        "      <th>attack</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1734,55 +1734,55 @@
        "    <tr>\n",
        "      <th>45</th>\n",
        "      <td>Paras</td>\n",
-       "      <td>bug</td>\n",
+       "      <td>grass</td>\n",
        "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>46</th>\n",
        "      <td>Parasect</td>\n",
-       "      <td>bug</td>\n",
+       "      <td>grass</td>\n",
        "      <td>95</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>250</th>\n",
        "      <td>Celebi</td>\n",
-       "      <td>psychic</td>\n",
+       "      <td>grass</td>\n",
        "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>269</th>\n",
        "      <td>Lotad</td>\n",
-       "      <td>water</td>\n",
+       "      <td>grass</td>\n",
        "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>270</th>\n",
        "      <td>Lombre</td>\n",
-       "      <td>water</td>\n",
+       "      <td>grass</td>\n",
        "      <td>50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>271</th>\n",
        "      <td>Ludicolo</td>\n",
-       "      <td>water</td>\n",
+       "      <td>grass</td>\n",
        "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>344</th>\n",
        "      <td>Lileep</td>\n",
-       "      <td>rock</td>\n",
+       "      <td>grass</td>\n",
        "      <td>41</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>345</th>\n",
        "      <td>Cradily</td>\n",
-       "      <td>rock</td>\n",
+       "      <td>grass</td>\n",
        "      <td>81</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>412</th>\n",
        "      <td>Wormadam</td>\n",
-       "      <td>bug</td>\n",
+       "      <td>grass</td>\n",
        "      <td>59</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1794,73 +1794,73 @@
        "    <tr>\n",
        "      <th>539</th>\n",
        "      <td>Sewaddle</td>\n",
-       "      <td>bug</td>\n",
+       "      <td>grass</td>\n",
        "      <td>53</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>540</th>\n",
        "      <td>Swadloon</td>\n",
-       "      <td>bug</td>\n",
+       "      <td>grass</td>\n",
        "      <td>63</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>541</th>\n",
        "      <td>Leavanny</td>\n",
-       "      <td>bug</td>\n",
+       "      <td>grass</td>\n",
        "      <td>103</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>584</th>\n",
        "      <td>Deerling</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>grass</td>\n",
        "      <td>60</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>585</th>\n",
        "      <td>Sawsbuck</td>\n",
-       "      <td>normal</td>\n",
+       "      <td>grass</td>\n",
        "      <td>100</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>707</th>\n",
        "      <td>Phantump</td>\n",
-       "      <td>ghost</td>\n",
+       "      <td>grass</td>\n",
        "      <td>70</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>708</th>\n",
        "      <td>Trevenant</td>\n",
-       "      <td>ghost</td>\n",
+       "      <td>grass</td>\n",
        "      <td>110</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>709</th>\n",
        "      <td>Pumpkaboo</td>\n",
-       "      <td>ghost</td>\n",
+       "      <td>grass</td>\n",
        "      <td>66</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>710</th>\n",
        "      <td>Gourgeist</td>\n",
-       "      <td>ghost</td>\n",
+       "      <td>grass</td>\n",
        "      <td>90</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>780</th>\n",
        "      <td>Dhelmise</td>\n",
-       "      <td>ghost</td>\n",
+       "      <td>grass</td>\n",
        "      <td>131</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>892</th>\n",
        "      <td>Zarude</td>\n",
-       "      <td>dark</td>\n",
+       "      <td>grass</td>\n",
        "      <td>120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>897</th>\n",
        "      <td>Calyrex</td>\n",
-       "      <td>psychic</td>\n",
+       "      <td>grass</td>\n",
        "      <td>80</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -1868,39 +1868,39 @@
        "</div>"
       ],
       "text/plain": [
-       "    english_name primary_type  attack\n",
-       "45         Paras          bug      70\n",
-       "46      Parasect          bug      95\n",
-       "250       Celebi      psychic     100\n",
-       "269        Lotad        water      30\n",
-       "270       Lombre        water      50\n",
-       "271     Ludicolo        water      70\n",
-       "344       Lileep         rock      41\n",
-       "345      Cradily         rock      81\n",
-       "412     Wormadam          bug      59\n",
-       "491      Shaymin        grass     100\n",
-       "539     Sewaddle          bug      53\n",
-       "540     Swadloon          bug      63\n",
-       "541     Leavanny          bug     103\n",
-       "584     Deerling       normal      60\n",
-       "585     Sawsbuck       normal     100\n",
-       "707     Phantump        ghost      70\n",
-       "708    Trevenant        ghost     110\n",
-       "709    Pumpkaboo        ghost      66\n",
-       "710    Gourgeist        ghost      90\n",
-       "780     Dhelmise        ghost     131\n",
-       "892       Zarude         dark     120\n",
-       "897      Calyrex      psychic      80"
+       "    english_name secondary_type  attack\n",
+       "45         Paras          grass      70\n",
+       "46      Parasect          grass      95\n",
+       "250       Celebi          grass     100\n",
+       "269        Lotad          grass      30\n",
+       "270       Lombre          grass      50\n",
+       "271     Ludicolo          grass      70\n",
+       "344       Lileep          grass      41\n",
+       "345      Cradily          grass      81\n",
+       "412     Wormadam          grass      59\n",
+       "491      Shaymin          grass     100\n",
+       "539     Sewaddle          grass      53\n",
+       "540     Swadloon          grass      63\n",
+       "541     Leavanny          grass     103\n",
+       "584     Deerling          grass      60\n",
+       "585     Sawsbuck          grass     100\n",
+       "707     Phantump          grass      70\n",
+       "708    Trevenant          grass     110\n",
+       "709    Pumpkaboo          grass      66\n",
+       "710    Gourgeist          grass      90\n",
+       "780     Dhelmise          grass     131\n",
+       "892       Zarude          grass     120\n",
+       "897      Calyrex          grass      80"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "best_ataque_pokemons_grama = secondary_type_pokemons_grama[secondary_type_pokemons_grama['attack'] > 10]\n",
-    "best_ataque_pokemons_grama[[\"english_name\",\"primary_type\",\"attack\"]]\n"
+    "best_ataque_pokemons_grama[[\"english_name\",\"secondary_type\",\"attack\"]]\n"
    ]
   },
   {
